--- a/src/main/java/de/autohaus/ui/GUI.form
+++ b/src/main/java/de/autohaus/ui/GUI.form
@@ -55,7 +55,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Löschen"/>
+                      <text value="Loeschen"/>
                     </properties>
                   </component>
                   <component id="b7e6f" class="javax.swing.JButton" binding="MAINaktualisierenButton">
@@ -223,7 +223,7 @@
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Einfügen"/>
+                          <text value="Einfuegen"/>
                         </properties>
                       </component>
                       <component id="4cdc3" class="javax.swing.JButton" binding="ATaktialisierenButton">
@@ -239,7 +239,7 @@
                           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Löschen"/>
+                          <text value="Loeschen"/>
                         </properties>
                       </component>
                     </children>
@@ -667,7 +667,7 @@
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Einfügen"/>
+                          <text value="Einfuegen"/>
                         </properties>
                       </component>
                       <component id="3cf43" class="javax.swing.JButton" binding="ASaktualisierenButton">
@@ -683,7 +683,7 @@
                           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Löschen"/>
+                          <text value="Loeschen"/>
                         </properties>
                       </component>
                     </children>
@@ -867,7 +867,7 @@
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Einfügen"/>
+                          <text value="Einfuegen"/>
                         </properties>
                       </component>
                       <component id="e56a0" class="javax.swing.JButton" binding="MTaktualisierenButton">
@@ -883,7 +883,7 @@
                           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="Löschen"/>
+                          <text value="Loeschen"/>
                         </properties>
                       </component>
                     </children>
@@ -1052,6 +1052,5 @@
   </grid>
   <inspectionSuppressions>
     <suppress inspection="NoLabelFor" id="ad2af"/>
-    <suppress inspection="I18nForm"/>
   </inspectionSuppressions>
 </form>
